--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-typescript-version",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://andrii256-denysVarenik.github.io/grocceries-front",
+  "homepage": "https://andrii256-denysVarenik.github.io/grocceries-front/build",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
