--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-typescript-version",
   "version": "0.1.0",
   "private": true,
+  "path": "https://andrii256-denysvarenik.github.io/grocceries-front/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
